feat: bottom navigation with fragments

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Music Sync</string>
+    <string name="menu_item_home">Home</string>
+    <string name="menu_item_fetch">Fetch</string>
 </resources>
